[gd_scene load_steps=20 format=3 uid="uid://cgcbp5m61rywd"]

[ext_resource type="Theme" uid="uid://cmd714lbb53ja" path="res://assets/resources/themes/ui_theme.tres" id="1_haby5"]
[ext_resource type="Script" path="res://assets/scenes/menu/loadingscreen/loadingScreen.gd" id="2_t86jf"]
[ext_resource type="AudioStream" uid="uid://c7v7iev137c2t" path="res://assets/sounds/ui/notif2_new.wav" id="3_i6oou"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_lvrfr"]

[sub_resource type="Shader" id="Shader_oyvhc"]
code = "shader_type canvas_item;
uniform vec4 color: source_color;
uniform float multiplier = 0.2;
uniform float softness = 3.0;

void fragment() {
	float value = distance(UV,vec2(0.5));
	COLOR = vec4(color.rgb,smoothstep(multiplier,softness,value));
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d5kwe"]
shader = SubResource("Shader_oyvhc")
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/multiplier = 0.56
shader_parameter/softness = 0.895

[sub_resource type="Gradient" id="Gradient_fiuee"]
offsets = PackedFloat32Array(0.0147783, 0.832599)
colors = PackedColorArray(0.603922, 0, 0, 0.670588, 0.14902, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_011tb"]
gradient = SubResource("Gradient_fiuee")

[sub_resource type="Animation" id="Animation_lphui"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("worldName/worldnameBG:texture:gradient")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("Gradient_fiuee")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("worldName/worldnameBG:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("worldName/worldnameBG:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("worldName/worldnameBG:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(509, 121.677)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("worldName/worldNamelabel:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12, 4)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("worldName/worldNamelabel:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("worldName/worldNamelabel:size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(653, 115)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("worldName/worldNamelabel:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("worldName/worldDescription:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(18, 69)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("worldName/worldDescription:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("worldName/worldDescription:size")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(766, 52)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("worldName/worldDescription:self_modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("vignette:material:shader_parameter/multiplier")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.56]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("worldBackground:self_modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_05hkw"]
resource_name = "flyout"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("worldName/worldnameBG:texture:gradient")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.466517, 1),
"update": 0,
"values": [SubResource("Gradient_fiuee"), SubResource("Gradient_fiuee")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("worldName/worldnameBG:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("worldName/worldnameBG:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("worldName/worldnameBG:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(0.233259, 1),
"update": 0,
"values": [Vector2(33, 122), Vector2(509, 121.677)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("worldName/worldNamelabel:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 0.9),
"transitions": PackedFloat32Array(0.170755, 1),
"update": 0,
"values": [Vector2(-67, 4), Vector2(12, 4)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("worldName/worldNamelabel:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.2, 0.9),
"transitions": PackedFloat32Array(0.170755, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("worldName/worldNamelabel:size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.2, 0.9),
"transitions": PackedFloat32Array(0.170755, 1),
"update": 0,
"values": [Vector2(653, 115), Vector2(653, 115)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("worldName/worldNamelabel:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.2, 1.1),
"transitions": PackedFloat32Array(0.34151, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("worldName/worldDescription:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.9, 1.3),
"transitions": PackedFloat32Array(0.450625, 1),
"update": 0,
"values": [Vector2(18, 30), Vector2(18, 69)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("worldName/worldDescription:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.9, 1.3),
"transitions": PackedFloat32Array(0.450625, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("worldName/worldDescription:size")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.9, 1.3),
"transitions": PackedFloat32Array(0.450625, 1),
"update": 0,
"values": [Vector2(766, 52), Vector2(766, 52)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("worldName/worldDescription:self_modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0.9, 1.3),
"transitions": PackedFloat32Array(0.329877, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("vignette:material:shader_parameter/multiplier")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 4.4),
"transitions": PackedFloat32Array(0.125, 1),
"update": 0,
"values": [0.56, 0.46]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("worldBackground:self_modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(0.329877, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ut57x"]
_data = {
"RESET": SubResource("Animation_lphui"),
"flyout": SubResource("Animation_05hkw")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_r6ijf"]
random_pitch = 1.05
streams_count = 1
stream_0/stream = ExtResource("3_i6oou")

[sub_resource type="Animation" id="Animation_wdyjg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(674, 800)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(252, 32)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_uhhhk"]
resource_name = "flyout"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.196146, 1),
"update": 0,
"values": [Vector2(-107, -30), Vector2(-106, -69)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(252, 32), Vector2(252, 32)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.210224, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../loadCompleted:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jl7qx"]
_data = {
"RESET": SubResource("Animation_wdyjg"),
"flyout": SubResource("Animation_uhhhk")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q7akn"]

[sub_resource type="Gradient" id="Gradient_060mk"]
offsets = PackedFloat32Array(0, 0.929825, 0.988304)
colors = PackedColorArray(0.329412, 0, 0, 1, 0.513932, 0.0205022, 0, 0.692466, 0.541176, 0.0235294, 0, 0.168627)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_b8ihh"]
gradient = SubResource("Gradient_060mk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2w1be"]
texture = SubResource("GradientTexture1D_b8ihh")

[node name="loadingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_haby5")
script = ExtResource("2_t86jf")

[node name="worldBackground" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_lvrfr")

[node name="vignette" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_d5kwe")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="worldName" type="Control" parent="."]
layout_mode = 1
anchor_bottom = 0.13
offset_right = 743.0

[node name="worldnameBG" type="TextureRect" parent="worldName"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.043
offset_right = 509.0
offset_bottom = -0.353989
texture = SubResource("GradientTexture1D_011tb")
expand_mode = 1

[node name="worldNamelabel" type="Label" parent="worldName"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 4.0
offset_right = 665.0
offset_bottom = 2.00001
theme_override_font_sizes/font_size = 76
text = "World NAME"

[node name="worldDescription" type="Label" parent="worldName"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 69.0
offset_right = 784.0
offset_bottom = 4.00001
grow_vertical = 2
theme_override_colors/font_color = Color(0.564962, 0.564962, 0.564962, 1)
theme_override_font_sizes/font_size = 41
text = "World Description"

[node name="animationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ut57x")
}

[node name="loadCompleted" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_r6ijf")
bus = &"UI"

[node name="control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="continueLabel" type="Label" parent="control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 654.0
offset_top = 760.0
offset_right = 906.0
offset_bottom = 792.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 31
text = "Press Any Key to continue"

[node name="animationPlayer" type="AnimationPlayer" parent="control/continueLabel"]
libraries = {
"": SubResource("AnimationLibrary_jl7qx")
}

[node name="progressBar" type="ProgressBar" parent="control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.935556
anchor_bottom = 0.966
offset_left = -780.0
offset_top = -55.4222
offset_right = 821.0
offset_bottom = -33.64
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_styles/background = SubResource("StyleBoxEmpty_q7akn")
theme_override_styles/fill = SubResource("StyleBoxTexture_2w1be")
